--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -5,3 +5,6 @@
 // Blocks
 @import "blocks/header.scss";
 @import "blocks/header-menu.scss";
+@import "blocks/benefits.scss";
+@import "blocks/flats.scss";
+@import "blocks/cards.scss";
