added feedback section

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -8,3 +8,5 @@
 @import "blocks/benefits.scss";
 @import "blocks/flats.scss";
 @import "blocks/cards.scss";
+@import "blocks/feedback.scss";
+@import "blocks/form.scss";
