--- a/css/style.css
+++ b/css/style.css
@@ -460,3 +460,114 @@ body a:hover {
   left: 44px;
   z-index: 10;
 }
+
+.feedback {
+  padding: 180px 0;
+  position: relative;
+}
+.feedback::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(10.42%, #242B33), color-stop(50.52%, rgba(36, 43, 51, 0)), color-stop(90.1%, #242B33)), -webkit-gradient(linear, left bottom, left top, from(rgba(36, 43, 51, 0.9)), to(rgba(36, 43, 51, 0.9)));
+  background: linear-gradient(180deg, #242B33 10.42%, rgba(36, 43, 51, 0) 50.52%, #242B33 90.1%), linear-gradient(0deg, rgba(36, 43, 51, 0.9) 0%, rgba(36, 43, 51, 0.9) 100%);
+  z-index: 2;
+}
+.feedback__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 1;
+}
+.feedback__container {
+  position: relative;
+  z-index: 3;
+}
+.feedback__title {
+  margin: 0 0 17px 0;
+}
+.feedback__body {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 30px 1fr;
+  grid-template-columns: 1fr 1fr;
+  -webkit-column-gap: 30px;
+     -moz-column-gap: 30px;
+          column-gap: 30px;
+}
+.feedback__text {
+  line-height: 1.5;
+}
+.feedback__text p + p {
+  margin: 1em 0 0 0;
+}
+.feedback__form {
+  display: -ms-grid;
+  display: grid;
+  grid-template: repeat(auto-fit, minmax(50px, 1fr))/repeat(auto-fit, minmax(230px, 1fr));
+  gap: 35px 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form__input {
+  font-size: 0.875rem;
+  min-height: 50px;
+  background-color: rgba(255, 255, 255, 0.2);
+  text-align: center;
+  color: #fff;
+  padding: 12px;
+  -webkit-transition: background 0.3s;
+  transition: background 0.3s;
+}
+.form__input:focus {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.form__input::-webkit-input-placeholder {
+  color: #BEBEBE;
+  opacity: 1;
+}
+.form__input::-moz-placeholder {
+  color: #BEBEBE;
+  opacity: 1;
+}
+.form__input:-ms-input-placeholder {
+  color: #BEBEBE;
+  opacity: 1;
+}
+.form__input::-ms-input-placeholder {
+  color: #BEBEBE;
+  opacity: 1;
+}
+.form__input::placeholder {
+  color: #BEBEBE;
+  opacity: 1;
+}
+.form__privacy {
+  color: #E7E7E7;
+  text-align: center;
+  font-size: 0.8125rem;
+  line-height: 1.2;
+}
+.form__button {
+  min-height: 50px;
+  padding: 12px;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.6875;
+  background-color: #D4C17F;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+.form__button:hover {
+  background-color: rgba(212, 193, 127, 0.9);
+}
