--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -10,3 +10,7 @@
 @import "blocks/cards.scss";
 @import "blocks/feedback.scss";
 @import "blocks/form.scss";
+@import "blocks/video-block.scss";
+@import "blocks/map-block.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/footer.scss";
