--- a/#source/scss/base/_base.scss
+++ b/#source/scss/base/_base.scss
@@ -40,7 +40,7 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-
+    overflow-x: hidden;
 }
 [class*="__container"] {
     max-width: 1130px;
