--- a/#source/scss/base/_variables.scss
+++ b/#source/scss/base/_variables.scss
@@ -1,4 +1,4 @@
-// fonts
+// Fonts
 $font-main: Raleway, sans-serif;
 $font-accent: "Playfair Display", serif;
 $font-secondary: Roboto, sans-serif;
@@ -10,3 +10,18 @@ $white: #fff;
 $footer-bg: #2D343C;
 $placeholder-clr: #BEBEBE;
 $privacy-clr: #E7E7E7;
+
+// Sizes
+$header-height: 66;
+
+// Media 
+$container: 1130;
+$tablet: 992;
+$phone: 767;
+$minScreen: 320;
+
+// Layouts 
+$layout1: 1;
+$layout2: 5;
+$layout3: 10;
+$layout4: 25;
