--- a/#source/scss/blocks/benefits.scss
+++ b/#source/scss/blocks/benefits.scss
@@ -1,14 +1,20 @@
 .benefits {
     padding: 120px 0;
+    position: relative;
+    &::after {
+        content: "II";
+        left: calc(50% + 555px);
+        @include decorNumber
+    }
     &__container {
         max-width: 850px;
-        overflow: hidden;
     }
     &__body {
         display: flex;
         justify-content: center;
         margin: 0 -35px;
         row-gap: 35px;
+        position: relative;
     }
     &__item {
         padding: 0 35px;
