--- a/#source/scss/blocks/map-block.scss
+++ b/#source/scss/blocks/map-block.scss
@@ -1,5 +1,14 @@
 .map-block {
     padding: 180px 0;
+    position: relative;
+    &::after {
+        @include decorNumber;
+        top: 180px;
+        content: "V";
+        left: calc(50% - 555px);
+        line-height: 1;
+        z-index: - 1;
+    }
     &__title {
         margin: 0 0 88px 0;
     }
