--- a/#source/scss/base/_variables.scss
+++ b/#source/scss/base/_variables.scss
@@ -20,6 +20,14 @@ $tablet: 992;
 $phone: 767;
 $minScreen: 320;
 
+// Margin
+$title-bottom-max: 88;
+$title-bottom-min: 20;
+
+// font-size
+$title-fz-max: 36;
+$title-fz-min: 24;
+
 // Layouts 
 $layout1: 1;
 $layout2: 5;
