--- a/#source/scss/blocks/video-block/video-block.scss
+++ b/#source/scss/blocks/video-block/video-block.scss
@@ -1,5 +1,6 @@
 .video-block {
     position: relative;
+    overflow: hidden;
     &::after {
         @include decorNumber;
         content: "IV";
