--- a/#source/scss/base/_base.scss
+++ b/#source/scss/base/_base.scss
@@ -20,7 +20,6 @@ body {
 }
 .wrapper {
     min-height: 100%;
-    overflow: hidden;
 }
 ._ibg {
     position: relative;
@@ -42,7 +41,6 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
 }
 [class*="__container"] {
     max-width: toRem($container);
@@ -58,6 +56,9 @@ body {
     @include mediaPhone {
         width: 100%;
     }
+}
+.content {
+    flex: 1 1 auto;
 }
 .visually-hidden {
     /* Contain text within 1px box */
