--- a/#source/scss/base/_function.scss
+++ b/#source/scss/base/_function.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
 // TO %
-@function percent($pxOne, $pxTwo) {
+@function toPercent($pxOne, $pxTwo) {
     $result: math.div($pxOne, $pxTwo) * 100%;
     @return $result;
 }
