--- a/#source/scss/blocks/feedback/blocks/form.scss
+++ b/#source/scss/blocks/feedback/blocks/form.scss
@@ -1,6 +1,6 @@
 .form {
     &__input {
-        font-size: 0.875rem;
+        font-size: toRem(14);
         min-height: 50px;
         background-color: rgba(255, 255, 255, .2);
         text-align: center;
@@ -20,14 +20,14 @@
     &__privacy {
         color: $privacy-clr;
         text-align: center;
-        font-size: 0.8125rem;
+        font-size: toRem(13);
         line-height: 1.2;
     }
     &__button {
         min-height: 50px;
         padding: 12px;
         color: $white;
-        font-size: 1rem;
+        font-size: toRem(16);
         font-weight: 700;
         line-height: 1.6875;
         background-color: $accent;
