--- a/#source/scss/blocks/feedback/feedback.scss
+++ b/#source/scss/blocks/feedback/feedback.scss
@@ -1,3 +1,5 @@
+@import "blocks/form.scss";
+
 .feedback {
     padding: 180px 0;
     position: relative;
@@ -10,7 +12,7 @@
         height: 100%;
         background: linear-gradient(180deg, #242B33 10.42%, rgba(36, 43, 51, 0.00) 50.52%, #242B33 90.1%), 
             linear-gradient(0deg, rgba(36, 43, 51, 0.90) 0%, rgba(36, 43, 51, 0.90) 100%);
-        z-index: 2;
+        z-index: $layout2;
     }
     &__image {
         position: absolute;
@@ -19,31 +21,33 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        z-index: 1;
+        z-index: $layout1;
     }
     &__container {
         position: relative;
-        z-index: 3;
+        z-index: $layout3;
     }
     &__title {
-        margin: 0 0 17px 0;
+        margin: 0 0 toEm(17) 0;
     }
     &__body {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        column-gap: 30px;
+        grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+        gap: 30px;
     }
     &__text {
         line-height: 1.5;
+        @include responseValue("font-size", 14, 16);
         p + p {
-            margin: 1em 0 0 0;
+            @include responseValue("margin-bottom", 10, 16);
         }
     }
     &__form {
         display: grid;
         grid-template: repeat(auto-fit, minmax(50px, 1fr)) / repeat(auto-fit, minmax(230px, 1fr));
-    
         gap: 35px 30px;
         align-items: center;
     }
+    @include responseValue("padding-top", 30, 180);
+    @include responseValue("padding-bottom", 30, 180);
 }
