--- a/#source/scss/blocks/flats/blocks/cards.scss
+++ b/#source/scss/blocks/flats/blocks/cards.scss
@@ -1,8 +1,9 @@
 .cards {
     display: grid;
-    grid-template: repeat(auto-fit, minmax(auto, 320px)) / repeat(auto-fit, minmax(350px, 1fr));
-    grid-auto-rows: minmax(auto, 320px);
+    grid-template: repeat(auto-fit, 320px) / repeat(auto-fit, minmax(350px, 1fr));
+    grid-auto-rows: 320px;
     gap:30px;
+
     &__item {
         overflow: hidden;
         &::before {
@@ -16,11 +17,11 @@
                 linear-gradient(180deg, 
                 rgba(36, 43, 51, 0.00) 0%, 
                 #242B33 100%);
-            z-index: 5;
+            z-index: $layout2;
         }
         &::after {
             content: "";
-            z-index: 11;
+            z-index: $layout3;
             position: absolute;
             top: 0px;
             left: 0px;
@@ -30,7 +31,6 @@
             opacity: 0;
             transition: all .3s ease;
         }
-        z-index: 20;
         &:hover:after {
             opacity: .4;
             top: 30px;
@@ -43,14 +43,19 @@
         }
     }
     &__image {
-        transition: transform .3s ease;
+        transition: transform .3s;
     }
     &__title {
         font-family: $font-main;
-        font-size: 1.5rem;
+        @include responseValue("font-size", 16, 24);
         position: absolute;
         bottom: 50px;
         left: 44px;
-        z-index: 10;
+        z-index: $layout4;
+    }
+    @include mediaTablet {
+        grid-template: repeat(auto-fit, 220px) / repeat(auto-fit, minmax(280px, 1fr));
+        grid-auto-rows: 220px;
+        gap: 20px;
     }
 }
