--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,6 @@ body._lock .page {
 
 .wrapper {
   min-height: 100%;
-  overflow: hidden;
 }
 
 ._ibg {
@@ -120,7 +119,6 @@ body._lock .page {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  overflow-x: hidden;
 }
 
 [class*=__container] {
@@ -142,6 +140,12 @@ body._lock .page {
   [class*=__container] {
     width: 100%;
   }
+}
+
+.content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .visually-hidden {
@@ -399,13 +403,37 @@ body._lock .page {
      object-fit: cover;
 }
 
+.title {
+  color: #D4C17F;
+  font-family: "Playfair Display", serif;
+  font-size: 36px;
+  font-weight: 700;
+}
+@media (max-width: 70.625em) {
+  .title {
+    font-size: calc(24px + 12 * ((100vw - 320px) / 810));
+  }
+}
+
 .benefits {
-  padding: 120px 0;
+  padding-top: 120px;
+  padding-bottom: 120px;
   position: relative;
+  overflow: hidden;
+}
+@media (max-width: 70.625em) {
+  .benefits {
+    padding-top: calc(20px + 100 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 70.625em) {
+  .benefits {
+    padding-bottom: calc(20px + 100 * ((100vw - 320px) / 810));
+  }
 }
 .benefits::after {
   content: "II";
-  left: calc(50% + 555px);
+  left: calc(50% + 565px);
   position: absolute;
   top: 0;
   -webkit-transform: translate(-50%, 0);
@@ -418,25 +446,24 @@ body._lock .page {
   opacity: 0.02;
 }
 .benefits__container {
-  max-width: 850px;
+  max-width: 51.5rem;
 }
 .benefits__body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0 -35px;
-  row-gap: 35px;
+  display: -ms-grid;
+  display: grid;
+  grid-template: 1fr/repeat(auto-fit, minmax(170px, 1fr));
+  gap: 35px;
   position: relative;
 }
 .benefits__item {
-  padding: 0 35px;
   text-align: center;
 }
 .benefits__image {
-  margin: 0 0 53px 0;
+  margin: 0 0 3.3125em 0;
+  height: 80px;
+}
+.benefits__image img {
+  max-height: 100%;
 }
 .benefits__text {
   font-family: Roboto, sans-serif;
@@ -444,57 +471,29 @@ body._lock .page {
   font-weight: 300;
   line-height: 1.35;
 }
-@media (max-width: 840px) {
+@media (max-width: 62em) {
   .benefits__body {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    grid-template: 1fr/repeat(auto-fit, minmax(250px, 1fr));
+    gap: 25px;
   }
-  .benefits__item {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 50%;
-            flex: 1 1 50%;
+  .benefits__image {
+    margin: 0 0 1.875em 0;
+    height: 50px;
   }
-}
-
-.title {
-  color: #D4C17F;
-  font-family: "Playfair Display", serif;
-  font-size: 2.25rem;
-  font-weight: 700;
-}
-
-.flats {
-  position: relative;
-}
-.flats::after {
-  position: absolute;
-  top: 0;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-  color: #fff;
-  font-family: "Playfair Display", serif;
-  font-size: 400px;
-  font-weight: 700;
-  line-height: 1.15;
-  opacity: 0.02;
-  content: "III";
-  top: -10px;
-  left: calc(50% - 555px);
-}
-.flats__title {
-  margin: 0 0 88px 0;
+  .benefits__text {
+    font-size: 0.875rem;
+  }
 }
 
 .cards {
   display: -ms-grid;
   display: grid;
-  grid-template: repeat(auto-fit, minmax(auto, 320px))/repeat(auto-fit, minmax(350px, 1fr));
-  grid-auto-rows: minmax(auto, 320px);
+  grid-template: repeat(auto-fit, 320px)/repeat(auto-fit, minmax(350px, 1fr));
+  grid-auto-rows: 320px;
   gap: 30px;
 }
 .cards__item {
   overflow: hidden;
-  z-index: 20;
 }
 .cards__item::before {
   content: "";
@@ -509,7 +508,7 @@ body._lock .page {
 }
 .cards__item::after {
   content: "";
-  z-index: 11;
+  z-index: 10;
   position: absolute;
   top: 0px;
   left: 0px;
@@ -532,75 +531,57 @@ body._lock .page {
           transform: scale(1.1);
 }
 .cards__image {
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 .cards__title {
   font-family: Raleway, sans-serif;
-  font-size: 1.5rem;
+  font-size: 24px;
   position: absolute;
   bottom: 50px;
   left: 44px;
-  z-index: 10;
+  z-index: 25;
+}
+@media (max-width: 70.625em) {
+  .cards__title {
+    font-size: calc(16px + 8 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 62em) {
+  .cards {
+    grid-template: repeat(auto-fit, 220px)/repeat(auto-fit, minmax(280px, 1fr));
+    grid-auto-rows: 220px;
+    gap: 20px;
+  }
 }
 
-.feedback {
-  padding: 180px 0;
+.flats {
   position: relative;
 }
-.feedback::after {
-  content: "";
+.flats::after {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(10.42%, #242B33), color-stop(50.52%, rgba(36, 43, 51, 0)), color-stop(90.1%, #242B33)), -webkit-gradient(linear, left bottom, left top, from(rgba(36, 43, 51, 0.9)), to(rgba(36, 43, 51, 0.9)));
-  background: linear-gradient(180deg, #242B33 10.42%, rgba(36, 43, 51, 0) 50.52%, #242B33 90.1%), linear-gradient(0deg, rgba(36, 43, 51, 0.9) 0%, rgba(36, 43, 51, 0.9) 100%);
-  z-index: 2;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  color: #fff;
+  font-family: "Playfair Display", serif;
+  font-size: 400px;
+  font-weight: 700;
+  line-height: 1.15;
+  opacity: 0.02;
+  content: "III";
+  top: -10px;
+  left: calc(50% - 565px);
 }
-.feedback__image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  z-index: 1;
+.flats__title {
+  margin-bottom: 88px;
 }
-.feedback__container {
-  position: relative;
-  z-index: 3;
-}
-.feedback__title {
-  margin: 0 0 17px 0;
-}
-.feedback__body {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 30px 1fr;
-  grid-template-columns: 1fr 1fr;
-  -webkit-column-gap: 30px;
-     -moz-column-gap: 30px;
-          column-gap: 30px;
-}
-.feedback__text {
-  line-height: 1.5;
-}
-.feedback__text p + p {
-  margin: 1em 0 0 0;
-}
-.feedback__form {
-  display: -ms-grid;
-  display: grid;
-  grid-template: repeat(auto-fit, minmax(50px, 1fr))/repeat(auto-fit, minmax(230px, 1fr));
-  gap: 35px 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media (max-width: 70.625em) {
+  .flats__title {
+    margin-bottom: calc(20px + 68 * ((100vw - 320px) / 810));
+  }
 }
 
 .form__input {
@@ -657,8 +638,86 @@ body._lock .page {
   background-color: rgba(212, 193, 127, 0.9);
 }
 
+.feedback {
+  padding: 180px 0;
+  position: relative;
+  padding-top: 180px;
+  padding-bottom: 180px;
+}
+.feedback::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(10.42%, #242B33), color-stop(50.52%, rgba(36, 43, 51, 0)), color-stop(90.1%, #242B33)), -webkit-gradient(linear, left bottom, left top, from(rgba(36, 43, 51, 0.9)), to(rgba(36, 43, 51, 0.9)));
+  background: linear-gradient(180deg, #242B33 10.42%, rgba(36, 43, 51, 0) 50.52%, #242B33 90.1%), linear-gradient(0deg, rgba(36, 43, 51, 0.9) 0%, rgba(36, 43, 51, 0.9) 100%);
+  z-index: 5;
+}
+.feedback__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 1;
+}
+.feedback__container {
+  position: relative;
+  z-index: 10;
+}
+.feedback__title {
+  margin: 0 0 1.0625em 0;
+}
+.feedback__body {
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  gap: 30px;
+}
+.feedback__text {
+  line-height: 1.5;
+  font-size: 16px;
+}
+@media (max-width: 70.625em) {
+  .feedback__text {
+    font-size: calc(14px + 2 * ((100vw - 320px) / 810));
+  }
+}
+.feedback__text p + p {
+  margin-bottom: 16px;
+}
+@media (max-width: 70.625em) {
+  .feedback__text p + p {
+    margin-bottom: calc(10px + 6 * ((100vw - 320px) / 810));
+  }
+}
+.feedback__form {
+  display: -ms-grid;
+  display: grid;
+  grid-template: repeat(auto-fit, minmax(50px, 1fr))/repeat(auto-fit, minmax(230px, 1fr));
+  gap: 35px 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (max-width: 70.625em) {
+  .feedback {
+    padding-top: calc(30px + 150 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 70.625em) {
+  .feedback {
+    padding-bottom: calc(30px + 150 * ((100vw - 320px) / 810));
+  }
+}
+
 .video-block {
   position: relative;
+  overflow: hidden;
 }
 .video-block::after {
   position: absolute;
@@ -726,8 +785,19 @@ body._lock .page {
 }
 
 .map-block {
-  padding: 180px 0;
+  padding-top: 180px;
+  padding-bottom: 180px;
   position: relative;
+}
+@media (max-width: 70.625em) {
+  .map-block {
+    padding-top: calc(30px + 150 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 70.625em) {
+  .map-block {
+    padding-bottom: calc(30px + 150 * ((100vw - 320px) / 810));
+  }
 }
 .map-block::after {
   position: absolute;
@@ -742,12 +812,17 @@ body._lock .page {
   opacity: 0.02;
   top: 180px;
   content: "V";
-  left: calc(50% - 555px);
+  left: calc(50% - 565px);
   line-height: 1;
   z-index: -1;
 }
 .map-block__title {
-  margin: 0 0 88px 0;
+  margin-bottom: 88px;
+}
+@media (max-width: 70.625em) {
+  .map-block__title {
+    margin-bottom: calc(20px + 68 * ((100vw - 320px) / 810));
+  }
 }
 
 .map {
@@ -756,29 +831,65 @@ body._lock .page {
 }
 
 .subscribe {
-  padding: 0 0 191px 0;
+  padding-bottom: 191px;
+}
+@media (max-width: 70.625em) {
+  .subscribe {
+    padding-bottom: calc(30px + 161 * ((100vw - 320px) / 810));
+  }
 }
 .subscribe__title {
-  margin: 0 0 38px 0;
+  margin-bottom: 38px;
+}
+@media (max-width: 70.625em) {
+  .subscribe__title {
+    margin-bottom: calc(18px + 20 * ((100vw - 320px) / 810));
+  }
 }
 .subscribe__form {
   display: -ms-grid;
   display: grid;
-  grid-template: repeat(auto-fit, minmax(50px, 1fr))/repeat(auto-fit, minmax(230px, 1fr));
+  grid-template: repeat(auto-fit, minmax(50px, 1fr))/repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
-.subscribe__form .form__privacy {
-  -webkit-box-ordinal-group: 0;
-      -ms-flex-order: -1;
-          order: -1;
+@media (max-width: 47.9375em) {
+  .subscribe__form {
+    gap: 15px;
+  }
+}
+
+.footer-nav__list li {
+  margin: 0 0 0.9375em 0;
+}
+.footer-nav__list li:last-child {
+  margin: 0;
+}
+.footer-nav__link {
+  font-size: 0.875rem;
+  letter-spacing: 0.04375em;
+}
+.footer-nav__link_bold {
+  font-weight: 700;
+  color: #D4C17F;
 }
 
 .footer {
   background-color: #2D343C;
-  padding: 50px 0 51px 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+@media (max-width: 70.625em) {
+  .footer {
+    padding-top: calc(25px + 25 * ((100vw - 320px) / 810));
+  }
+}
+@media (max-width: 70.625em) {
+  .footer {
+    padding-bottom: calc(25px + 25 * ((100vw - 320px) / 810));
+  }
 }
 .footer__body {
   display: -ms-grid;
@@ -786,12 +897,11 @@ body._lock .page {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: start;
-  -ms-grid-rows: 1fr;
-  -ms-grid-columns: (1fr)[4];
-      grid-template: 1fr/repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  row-gap: 30px;
 }
 .footer__address > *:not(:last-child) {
-  margin: 0 0 20px 0;
+  margin: 0 0 1.25em 0;
 }
 .footer__social {
   display: -webkit-box;
@@ -803,19 +913,4 @@ body._lock .page {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.footer-nav__list li {
-  margin: 0 0 15px 0;
-}
-.footer-nav__list li:last-child {
-  margin: 0;
-}
-.footer-nav__link {
-  font-size: 0.875rem;
-  letter-spacing: 0.05em;
-}
-.footer-nav__link_bold {
-  font-weight: 700;
-  color: #D4C17F;
 }
