--- a/#source/scss/base/_mixins.scss
+++ b/#source/scss/base/_mixins.scss
@@ -25,12 +25,20 @@
         @content;
     }
 }
-@mixin responseValue($property, $minValue, $maxValue, $type: 1) {
+@mixin responseValue($property, $minValue, $maxValue, $type: 0) {
     $addSize: $maxValue - $minValue;
     @if $type == 1 {
         #{$property}: $maxValue + px;
         @include mediaContainer {
             #{$property}: calc(#{$minValue + px} + #{$addSize} * ((100vw - 320px) / #{$container - 320}));
         }
+    }
+    @if $type == 2 {
+        #{$property}: $maxValue + px;
+        @media (min-width: 1920px) {
+            #{$property}: calc(#{$minValue + px} + #{$addSize} * ((100vw - 320px) / #{1920 - 320}));
+        }
+    } @else {
+        #{$property}: calc(#{$minValue + px} + #{$addSize} * ((100vw - 320px) / #{1920 - 320}));
     }
 }
